Fixing waves for portrait high resolution; adding zoom on load to properly show on mobile Safari

--- a/public/style/Startpage.css
+++ b/public/style/Startpage.css
@@ -1,7 +1,6 @@
-/*:root {*/
-/*    touch-action: manipulation;*/
-/*    height: 100%*/
-/*}*/
+body {
+    background: rgb(23, 23, 44);
+}
 
 .startPageContainer{
     display: flex;
@@ -13,17 +12,14 @@
 }
 
 .dev{
-    height: 55dvh;
+    height: 50dvh;
     background-color: rgb(23, 23, 44);
-    color: whitesmoke;
-    align-content: center;
     position: relative;
 }
 
 .photos{
-    height: 45dvh;
+    height: 50dvh;
     align-content: center;
-    position: relative;
     background-color: white;
 }
 
@@ -33,9 +29,8 @@ img{
 
 .box-inner {
     position: absolute;
-    top: 48dvh;
-    left: 0;
-    width: 100%;
+    bottom: -10px;
+    width: 100vw;
     height: 75px;
     z-index: 9;
     zoom: 1.0;
@@ -51,8 +46,8 @@ img{
 
     pointer-events: none;
 
-    -webkit-animation: 120s waves linear infinite forwards;
-    animation: 120s waves linear infinite forwards;
+    -webkit-animation: 90s waves linear infinite forwards;
+    animation: 90s waves linear infinite forwards;
 }
 
 @-webkit-keyframes waves {
@@ -62,35 +57,47 @@ img{
 }
 
 @media only screen and (orientation: landscape) {
-    .startPageContainer{
+    body {
         height: 100dvh;
-        flex-direction: row;
-        overflow: hidden;
+        min-width: 100vw;
+        min-height: 100vh;
+        max-width: 100vw;
+        max-height: 100vh;
+
+        background: linear-gradient(to right, rgba(23, 23, 44, 100%),rgba(23, 23, 44, 100%), white) no-repeat;
+        zoom: 1;
     }
 
-    .box-inner {
-        rotate: 270deg !important;
-        left: 3.5vw !important;
-        z-index: 1;
-        animation: 60s waves linear infinite forwards;
-        border: none;
+    .startPageContainer{
+        height: 100dvh;
+        min-width: 100vw;
+        min-height: 100vh;
+        max-width: 100vw;
+        max-height: 100vh;
+        flex-direction: row;
+        overflow: hidden;
     }
 
     .dev {
         height: 100vh;
         width: 55vw;
+        flex-direction: row;
         align-content: center;
+    }
+
+
+    .box-inner {
+        rotate: -90deg !important;
+        position: absolute;
+        top: 50vh;
+        left: 6.5%;
+        zoom: 1.5;
+        max-height: 100vh;
     }
 
     .photos{
-        height: 100vh;
+        min-height: 100vh;
         width: 45vw;
         align-content: center;
-    }
-}
-
-@media only screen and (min-height: 1400px) {
-    .box-inner {
-        top: 50vh;
     }
 }
